# cosmic-shake-auto-splitter

./: CHANGELOG.md  Cargo.toml  CosmicShake-Win64-Shipping.CT  README.md
.cargo/: config.toml
.github/workflows/: check.yml
src/: ffi.rs  lib.rs  memory.rs  paths.rs
