[package]
name = "cosmic-shake-auto-splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

asr = { git = "https://github.com/LiveSplit/asr" }
bytemuck = "1.13.0"
once_cell = "1.17.1"
widestring = "1.0.2"
